# EatUp

./: .gitignore  .gitmodules  Makefile  TODO.md  readme.md
.testing/: Makefile  addOrder.js  check_project_size.sh
.testing/api/: Eatup Server API.postman_collection.json  setup.postman_collection.json
.testing/api/environments/: EatUp server.postman_environment.json  EatUp setup_server.postman_environment.json
app/EatUp_Client/: settings.gradle
app/EatUp_Client/app/: build.gradle
db/: Makefile  load_db.sql
db/.scripts/: create_db.sh  create_web_controller_db.sh  set_secrets.sh  start_all_db.sh  start_db.sh  start_db_controller.sh  stop_all_db.sh  stop_db.sh  stop_db_controller.sh  uninstall_all_db.sh  uninstall_db.sh  uninstall_db_controller.sh
docs/: project_analysis.md
server/: .docs.json  Cargo.toml  Dockerfile  Makefile
server/src/: cors.rs  main.rs
server/src/api/: mod.rs
server/src/api/v1/: mod.rs  model.rs  order.rs  product.rs  session.rs
server/src/db/: mod.rs  model.rs  order.rs  product.rs  session.rs
server/src/qr/: mod.rs
server/src/tools/: mod.rs  route_error.rs  uuidwrapper.rs
setup/: Makefile  TODO.md  start.sh
setup/eatup_setup/: package-lock.json  package.json  vite.config.ts
setup/eatup_setup/src/: App.tsx  Message.tsx
setup/eatup_setup_front/: Makefile  index.html  package-lock.json  package.json  vite.config.ts
setup/eatup_setup_front/src/: App.tsx  main.css  main.tsx
setup/eatup_setup_server/: .docs.json  .gitignore  Cargo.toml  Dockerfile  Makefile
setup/eatup_setup_server/src/: cmd.rs  cors.rs  dotenv.rs  main.rs  ws.rs
setup/eatup_setup_server/src/api/: error.rs  mod.rs
setup/eatup_setup_server/src/api/v1/: create_script.rs  microservices.rs  microservices_action.rs  mod.rs  status.rs
setup/eatup_setup_server/src/cmd/: generic.rs  mod.rs  servicehandler.rs  status.rs
setup/eatup_setup_server/src/model/: microservice.rs  microservice_action.rs  microservice_state.rs  mod.rs  project_state.rs
setup/eatup_setup_server/src/routes/: mod.rs  request.rs  router.rs
setup/eatup_setup_server_old/: Dockerfile
setup/eatup_setup_server_old/src/: cmd.rs  ws.rs
staff_web/eatup_staff_web/: Makefile  TODO.md  index.html  package-lock.json  package.json  vite.config.ts
staff_web/eatup_staff_web/src/: App.tsx  index.css  main.tsx
(+126 files in other folders)
