[package]
name = "eatup"
version = "0.1.0"
edition = "2021"
authors = ["Jkutkut"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.3"
serde = "1.0.159"
dotenv = "0.15.0"
tokio-postgres = "0.7.8"
serde_json = "1.0.95"
