[package]
name = "eatup"
version = "0.6.0"
edition = "2021"
authors = ["Jkutkut"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = [ "json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"

dotenv = "0.15.0"

uuid = { version = "1.3.1", features = ["serde", "v4"] }
tokio-postgres = { version = "0.7.8", features = ["with-uuid-1"] }
qrcode-generator = "4.1.8"
