[package]
name = "eatup_setup_server"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.9"
warp = "0.3"
futures = { version = "0.3", default-features = false }
# serde = {version = "1.0", features = ["derive"] }
# serde_json = "1.0"
